# ParaVisDemos

./: CMakeLists.txt  gradientVis.cpp  gradientVis.h  main.cpp
cbindings/: CMakeLists.txt  epar19.c  pthread_c_demo.c  simple.c  visi_example.c
cmake_modules/: detectCUDAarch.cmake  helpers.cmake
cuda/: CMakeLists.txt  cudaDemo.cpp  cudaDemoImage.cpp  imageFilter.cu  imageFilter.h  juliaKernel.cu  juliaKernel.h  rippleKernel.cu  rippleKernel.h  userBufferKernel.cu  userBufferKernel.h
data/: CMakeLists.txt  demoData.cpp  demoData.h  sampleData.qrc
openMP/: CMakeLists.txt  openMPDemo.cpp  openMPVis.cpp  openMPVis.h
pthreads/: CMakeLists.txt  pthreadVis.cpp  pthreadVis.h  pthreadVisImage.cpp  pthreadVisImage.h  threadDemo.cpp  threadDemoImage.cpp
test/: detect_cuda_arch.cu
